v8.16 fix Join button contrast for WCAG AA compliance
- Add !important to Join button color (#fff) to override ui.min.css
  body a { color: inherit !important } rule
- Black on #bd491e = 4.1:1 (fails AA), white on #bd491e = 5.1:1 (passes)

--- a/asae-explore.css
+++ b/asae-explore.css
@@ -317,24 +317,24 @@ body {
 #asae-eb-join-button {
     background-color: #bd491e;
     text-align: center;
-    text-decoration: none;
+    text-decoration: none !important;
     display: inline-block;
     font-size: 1em;
     text-transform: uppercase;
     line-height: 1.5em;
-    color: #fff;
+    color: #fff !important;
     font-weight: 700;
     padding: 0.2em 1em 0.2em 1em;
 }
 #asae-eb-join-button:hover {
     background-color: #fff;
-    color: #bd491e;
+    color: #bd491e !important;
 }
 a#asae-eb-join-button:visited {
-    color: #fff;
+    color: #fff !important;
 }
 a#asae-eb-join-button:hover {
-    color: #bd491e;
+    color: #bd491e !important;
 }
 .asae-eb-showdesc-switch {
     position: relative;
